--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ES6",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "outDir": "dist",
-    "declaration": false,
+    "declaration": true,
+    "outDir": "./lib",
+    "strict": false,
     "allowSyntheticDefaultImports": true,
     "removeComments": true,
     "preserveConstEnums": true,
