--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "scrape-it-all",
   "version": "1.0.0",
-  "description": "",
+  "description": "Modular web scraper for Node.JS",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf ./packages/*/lib",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "clean": "rm -rf packages/*/lib",
+    "lint": "eslint . --ext .js,.ts",
     "prebuild": "npm run clean",
     "build": "lerna run tsc",
     "postbuild": "npm run lint",
     "publish": "npm run build && lerna publish",
     "lerna:clean": "lerna clean -y",
-    "lerna:bootstrap": "npm run lerna:clean && lerna bootstrap --hoist"
+    "lerna:bootstrap": "npm run lerna:clean && lerna link && lerna exec npm install"
   },
   "author": "Rafael Bertelli <rafael.p.bertelli@gmail.com>",
   "license": "MIT",
